--- a/index.html
+++ b/index.html
@@ -1,21 +1,3 @@
-<!--
-All Rights Reserved
-
-Copyright (c) 2022 JDNZER
-
-Created by Techcable
-
-THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
-IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
-FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
-AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
-LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
-OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
-THE SOFTWARE.
--->
-
-
-
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -319,7 +301,7 @@ h4.bg-heading2 {
               <li>Product design</li>
               <li>Mobile design</li>
               <li>Illustration &amp; iconography</li>
-              <li>Frontend and backend development</li>
+              <li>Responsive design</li>
             </ul>
           </div>
         </div>
@@ -328,11 +310,11 @@ h4.bg-heading2 {
             <h4 class="bg-heading2">#Code</h4>
             <ul class="list-unstyled uu">
               <li>Html</li>
-              <li>CSS</li>
+              <li>Css</li>
+              <li>Scss</li>
               <li>JavaScript</li>
-              <li>PHP</li>
-              <li>scss</li>
-              <li>Database</li>
+              <li>Php</li>
+              <li>Mysql</li>
             </ul>
           </div>
         </div>
