--- a/index.html
+++ b/index.html
@@ -1,3 +1,14 @@
+<!-- 
+  
+
+Hey Hacker! What are you looking for? 
+
+My email: jdnzer@gmail.com
+Twitter: iskow_
+
+
+-->
+
 <!DOCTYPE html>
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
@@ -271,7 +282,7 @@ h4.bg-heading2 {
     <div class="row mt-cust">
       <div class="col-12 d-flex align-items-center">
         <div class="text-center w-100">
-          <div class="tt mb-4" style="-webkit-filter: grayscale(100%);"> <img src="img/main-profile.jpg"> </div>
+          <div class="tt mb-4"> <img src="img/Avatar_me.png"> </div>
           <h1 class="display-5 weight-600">Hi, I'm Jordan Z.</h1>
           <h6 class="mb-4">Developper web full stack</h6>
           <p class="text-muted lead col-md-12 col-lg-8 mx-auto">I make responsive  landing page and design for every kind of buiness in less 2 days.</p>
@@ -442,7 +453,7 @@ Working with Jordan was a huge time saver because of his speed, kindness and ser
             <div class="form-group">
               <textarea name="" cols="" rows="" class="form-control form-control-lg" placeholder="Give us as much detail as possible about the type of landing page you want"></textarea>
             </div>
-            <p style="color: #6164f8;">I stop make landing page to focus on my project.<br>Thank you for interesting :) </p>
+            <p style="color: #6164f8;">I stop build landing page to focus on my project.<br>Thank you for interesting :) </p>
             <button style="pointer-events: none;
     cursor: not-allowed;
     opacity: 0.65;
