--- a/index.html
+++ b/index.html
@@ -273,7 +273,8 @@ h4.bg-heading2 {
       <li class="nav-item active"> <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a> </li>
       <li class="nav-item"> <a class="nav-link" href="index.html#services">Services</a> </li>
       <li class="nav-item"> <a class="nav-link" href="index.html#Portfolio">Portfolio</a> </li>
-      <li class="nav-item"> <a class="nav-link" href="mailto: by_nyxo75@hotmail.com">Contact</a> </li>
+      <li class="nav-item"> <a class="nav-link" href="mailto: jdnzer@gmail.com">Email</a> </li>
+      <li class="nav-item"> <a class="nav-link" target="_blank" href="https://twitter.com/Iskow_">Twitter</a> </li>
     </ul>
     <a href="index.html#hire" class="btn btn-light text-blue">Hire Me</a> </div>
 </nav>
@@ -338,7 +339,7 @@ h4.bg-heading2 {
     <div class="row">
       <div class="col-12 text-center mb-5">
         <h2>Landing page portofolio</h2>
-        <p class="text-muted">If you want see all pages and more design <a href="mailto: by_nyxo75@hotmail.com" style="color: #625cfe;text-decoration: underline;">contact me</a></p>
+        <p class="text-muted">If you want see all pages and more design <a href="mailto: jdnzer@gmail.com" style="color: #625cfe;text-decoration: underline;">contact me</a></p>
       </div>
     </div>
     <div class="row align-items-center pb-5">
